Small code readability improvements in the `jpro-auth` module